--- a/vs2012/TE3D.vcxproj.filters
+++ b/vs2012/TE3D.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="..\tranformation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\core.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
