SUPER BUGFIX No 1
Makefile improved, bugs fixed . . .

--- a/vs2012/TE3D.vcxproj
+++ b/vs2012/TE3D.vcxproj
@@ -61,7 +61,7 @@
     <ClInclude Include="..\interface.h" />
     <ClInclude Include="..\list.h" />
     <ClInclude Include="..\models.h" />
-    <ClInclude Include="..\tranformation.h" />
+    <ClInclude Include="..\transformation.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
