--- a/vs2012/TE3D.vcxproj.filters
+++ b/vs2012/TE3D.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="..\transformation.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\graphics.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\arraylist.h">
