--- a/test/cube/makefile
+++ b/test/cube/makefile
@@ -10,15 +10,16 @@ LFLAGS = -lm -lte3d
 CC = gcc
 CFLAGS = -std=c99 -pedantic -Wall -Wextra -g -D LINUX -o $(output) $(SRC) $(LFLAGS)
 
-debug: $(output)
+debug:
 	@printf "Compiling (debug)... "
 	@$(CC) $(CFLAGS)
 	@echo "Done."
 	
-release: $(output)
+release:
 	@printf "Compiling... "
 	@$(CC) $(CFLAGS:-g=)
 	@echo "Done."
+	
 	
 clean:
 ifneq ($(wildcard $(output)),)
